# nccl

./: .gitignore  COPYRIGHT.txt  LICENSE.txt  Makefile  README.md
debian/: Makefile  changelog  changelog.in  control.in  copyright  create_txz.sh.in  libnccl-dev.install  libnccl-dev.install.in  libnccl1.install  libnccl2.install.in
doc/: Makefile  doc.css  index.html  index0.html  index_titles.py  introduction.html
fortran/: Makefile
fortran/src/: ncclfor.f90
makefiles/: common.mk  version.mk
ompi/nccl/: Makefile.am  coll_nccl.h  coll_nccl_allreduce.c  coll_nccl_bcast.c  coll_nccl_component.c  coll_nccl_debug.h  coll_nccl_kernels.cu  coll_nccl_kernels.h  coll_nccl_misc.c  coll_nccl_misc.h  coll_nccl_module.c  coll_nccl_module_misc.cpp  coll_nccl_module_misc.h  coll_nccl_multicoll.c  coll_nccl_multicoll.h  coll_nccl_reduce.c  configure.m4  help-mpi-coll-nccl.txt
pkg/: Makefile
pkg/debian/: Makefile  changelog.in  libnccl-dev.docs
pkg/srctxz/: Makefile  create_srctxz.sh.in
pkg/txz/: Makefile  create_txz.sh.in
share/: nccl_mpi.c
src/: Makefile  all_gather.cu  all_reduce.cu  all_reduce_test.cu  bootstrap.cu  bootstrap.h  broadcast.cu  common_coll.h  common_kernel.h  core.cu  core.h  crc32.cu  crc32.h  enqueue.h  init.cu  libwrap.cu  libwrap.h  mpi_test.cu  nccl.h  nccl.h.in  primitives.h  primstep.h  reduce.cu  reduce_kernel.h  reduce_scatter.cu  reduce_test.cu  syncfunc.h  test_utilities.h  topo.cu  transport.cu  transport.h
src/bootstrap/: bootstrap.cu  ext.cu  mpi.cu  socket.cu  socket.h
src/collectives/: all_gather.cu  all_reduce.cu  broadcast.cu  reduce.cu  reduce_scatter.cu
src/include/: bootstrap.h  common_coll.h  common_kernel.h  copy_kernel.h  core.h  crc32.h  debug.h  enqueue.h  env.h  ext.h  gdcopy.h  group.h  ibvwrap.h  ll_kernel.h  mpi.h  nccl_net.h  net.h  nvmlwrap.h  primitives.h  reduce_kernel.h  rings.h  shm.h  socket.h  topo.h  transport.h  utils.h
src/misc/: crc32.cu  enqueue.cu  ext.cu  gdcopy.cu  group.cu  ibvwrap.cu  mpi.c  mpi.cu  nvmlwrap.cu  rings.cu  topo.cu  utils.cu
src/transport/: ext.cu  mpi.cu  net.cu  (+7 more)
test/: Makefile  gcov.mk  googletest.mk  gtest.mk
(+116 files in other folders)
